# pussel

./: .analysis-complete.md  .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  MIGRATION_PLAN.md  Makefile  PLAN-google-auth.md  README.md  codecov.yml  implementation_plan.md  pyproject.toml  pyrightconfig.json  requirements.txt
backend/: .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_STYLE.md  Dockerfile  MODEL_ARCHITECTURE_ANALYSIS.md  QUICK_START_GUIDE.md  README.md  api.http  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
backend/app/: __init__.py  config.py  main.py  rate_limit.py
backend/app/auth/: __init__.py  dependencies.py  service.py
backend/app/models/: exp13_model.py  exp18_model.py  model.py  piece_classifier_model.py  piece_geometry_model.py  puzzle_model.py  user_model.py
backend/app/services/: __init__.py  background_remover.py  barcode_lookup_cache.py  classical_matcher.py  grid_snap.py  image_processor.py  implementation_plan.md  piece_classifier.py  piece_count_estimator.py  piece_detector.py  puzzle_cutter.py  puzzle_detector.py  puzzle_store.py  ravensburger_client.py  ravensburger_lookup.py  storage.py
backend/azure-storage-blob-stubs/: __init__.pyi
backend/azure-storage-blob-stubs/azure/: __init__.pyi
backend/deploy/: README.md  backend.env.example  docker-compose.yml  pussel-deploy.service  pussel-deploy.sh  pussel-deploy.timer
backend/scripts/: generate_test_token.py
backend/tests/: conftest.py  piece_geometry_fixtures.py  test_auth.py  test_barcode_endpoint.py  test_barcode_lookup_cache.py  test_classical_matcher.py  test_config.py  test_grid_snap.py  test_image_processor.py  test_main.py  test_piece_classifier.py  test_piece_count_estimator.py  test_piece_detector.py  test_piece_geometry_api.py  test_piece_geometry_contour.py  test_piece_geometry_corners.py  test_piece_geometry_edges.py  test_piece_geometry_fingerprint.py  test_piece_geometry_service.py  test_piece_geometry_store.py  test_puzzle_detector.py  test_puzzle_ownership.py  test_rate_limit.py  test_ravensburger_client.py  test_ravensburger_lookup.py
network/: .flake8  CIOU_LOSS.md  Makefile  README.md  architecture_review.md  config.py  dataset.py  download_images.py  find_lr.py  model.py  preprocessing_plan.md  puzzle_generator.py  pyproject.toml  pyrightconfig.json  requirements.txt  resize_puzzles.py  specification.md  train.py  visualize.py  visualize_piece.py
network/docs/: LOSS_FUNCTION_INVESTIGATION.md  MULTI_SCALE_ARCHITECTURE_PLAN.md
network/docs/puzzle_shape_generation/: README.md  SHAPE_IMPROVEMENT_SUGGESTIONS.md  reference_pieces.json
network/experiments/: CRITICAL_REVIEW.md  EXPERIMENT_LOG.md  IMAGE_PATCH_LOCALIZATION_RESEARCH.md  NORTH_STAR_GUIDE.md
network/experiments/baseline_sanity/: .gitignore  README.md  dataset.py  train.py  visualize.py
network/experiments/exp10_add_rotation/: README.md  __init__.py  dataset.py  generate_pieces.py  model.py  train.py  visualize.py
network/experiments/exp11_spatial_rotation/: README.md  __init__.py  dataset.py  model.py  train.py  visualize.py
network/experiments/exp12_rotation_correlation/: README.md  __init__.py  dataset.py  model.py  train.py  visualize.py
network/experiments/exp13_rotation_correlation_5k/: README.md  train.py
network/experiments/exp14_mobilevit_backbone/: README.md  __init__.py  model.py  train.py
network/experiments/exp15_fast_backbone_comparison/: README.md  __init__.py  dataset.py  model.py  train.py
network/experiments/exp16_3x3_grid/: README.md  dataset.py  train.py
network/experiments/exp17_3x3_more_data/: README.md  __init__.py  dataset.py  lr_finder.py  model.py  train.py  visualize.py
network/experiments/exp18_3x3_20k_puzzles/: README.md  __init__.py  dataset.py  lr_finder.py  model.py  train.py
network/experiments/exp19_siamese_architecture/: README.md  dataset.py  model.py  train.py  visualize.py
network/experiments/exp1_baseline_sanity/: README.md  model.py  train.py  visualize.py
network/experiments/exp20_realistic_pieces/: README.md  __init__.py  dataset.py  generate_dataset.py  harness.py  model.py  prepare_runpod_package.sh  reevaluate_checkpoint.py  regenerate_test_split.py  run_full_experiment.py  run_full_experiment.sh  runpod_setup.sh  splits.py  train.py  train_cuda.py  visualize.py
network/experiments/exp21_masked_rotation/: README.md  __init__.py  dataset.py  model.py  train_cuda.py  visualize.py
network/experiments/exp22_roma_matching/: README.md  __init__.py  evaluate.py  quick_test.py
network/experiments/exp23_classical_baselines/: README.md  __init__.py  evaluate.py
network/experiments/exp24_piece_classifier/: README.md  __init__.py  build_negatives.py  build_positives.py  data_prep.py  dataset.py  model.py  train.py
network/experiments/exp25_north_star_eval/: README.md  check_overview_orientation.py  evaluate.py
network/experiments/exp26_domain_randomization/: README.md  __init__.py  aug_dataset.py  augment.py  generate_dataset.py  train.py  visualize_augmentations.py
network/experiments/exp27_pretrained_features/: README.md  __init__.py  model.py  north_star_eval.py  train.py  zero_shot_probe.py
network/experiments/exp28_piece_geometry/: HANDOFF.md  README.md  collision_study.py  common.py  contact_sheets.py  corner_detect.py  debug_synth_failures.py  edge_match.py  edge_split.py  eval_corners.py  eval_edges.py  eval_matching.py  eval_reid.py  extract_contours.py  fingerprint.py  label_corners.py  synth_benchmark.py
network/experiments/exp29_stitch_quality/: HANDOFF.md  README.md  common.py  score_stitch.py  stitch.py  test_exp29.py
network/experiments/exp2_single_puzzle_overfit/: .gitignore  __init__.py  dataset.py  index.html  model.py  train.py
network/experiments/exp3_cell_classification/: .gitignore  README_1.md  README_2.md  __init__.py  dataset.py  model.py  (+2 more)
network/pussel_network/: __init__.py
network/tests/: __init__.py  test_ciou_loss.py
shared/puzzle_shapes/: pyproject.toml  pyrightconfig.json
(+379 files in other folders)
