[project]
name = "pussel-network"
version = "0.1.0"
description = "PyTorch Lightning-based CNN model for puzzle piece position and rotation prediction"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # ML frameworks
    "torch>=2.6.0",
    "torchvision>=0.17.0",
    "pytorch-lightning>=2.5.0",
    "timm>=0.9.12",
    # Data processing
    "albumentations>=2.0.8",
    "pillow>=11.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    # Utilities
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    # Formatting
    "black>=25.1.0",
    "isort>=5.13.2",
    # Linting
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-import-order>=0.18.2",
    "flake8-bugbear>=24.0.0",
    "flake8-comprehensions>=3.14.0",
    "flake8-pytest-style>=2.0.0",
    # Type checking
    "pyright>=1.1.390",
    "types-Pillow",
    "types-requests",
    "pandas-stubs",
    "types-tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pussel_network"]

[tool.isort]
profile = "black"
line_length = 120
skip_glob = [
    "datasets/*",
    "checkpoints/*",
    "logs/*",
    "__pycache__/*",
    "*.csv*",
    "*.png",
    "*.jpg",
]

[tool.black]
line-length = 120
extend-exclude = '''
(
    datasets/
    | checkpoints/
    | logs/
)
'''

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
exclude = [".venv", "datasets", "checkpoints", "logs", "experiments"]
