[project]
name = "pussel-network"
version = "0.1.0"
description = "PyTorch Lightning-based CNN model for puzzle piece position and rotation prediction"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # ML frameworks
    "torch>=2.13.0",
    "torchvision>=0.17.0",
    "pytorch-lightning>=2.6.5",
    "timm>=1.0.28",
    # Data processing
    "albumentations>=2.0.8",
    "pillow>=12.2.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    # Utilities
    "matplotlib>=3.11.0",
    "requests>=2.34.2",
    "tqdm>=4.68.4",
    # Shared packages
    "puzzle-shapes",
]

[project.optional-dependencies]
dev = [
    # Formatting
    "black>=26.5.1",
    "isort>=8.0.1",
    # Linting
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-import-order>=0.18.2",
    "flake8-bugbear>=24.0.0",
    "flake8-comprehensions>=3.14.0",
    "flake8-pytest-style>=2.0.0",
    # Type checking
    "pyright>=1.1.411",
    "types-Pillow",
    "types-requests",
    "pandas-stubs",
    "types-tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pussel_network"]

[tool.isort]
profile = "black"
line_length = 120
skip_glob = [
    "datasets/*",
    "checkpoints/*",
    "logs/*",
    "__pycache__/*",
    "*.csv*",
    "*.png",
    "*.jpg",
]

[tool.black]
line-length = 120
extend-exclude = '''
(
    datasets/
    | checkpoints/
    | logs/
)
'''

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
exclude = [".venv", "datasets", "checkpoints", "logs", "experiments"]

[tool.uv.sources]
puzzle-shapes = { path = "../shared/puzzle_shapes", editable = true }
