[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puzzle-shapes"
version = "0.1.0"
description = "Shared library for puzzle piece shape generation using Bezier curves"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pyright>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
